--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,13 +13,12 @@
 
   <div class="flex-container">
 
-    <div class="box">
+    <div class="box" style="background: none; box-shadow: none; margin-bottom: 0;">
       <div style="line-height: 0; text-align: center;">
-        <img style="width: 85%; margin-top: 1rem; margin-bottom: 1rem; image-rendering: pixelated;"
-          src="/images/logo.png" />
+        <img
+          style="width: 85%;margin-top: 1rem;margin-bottom: 1rem;image-rendering: pixelated;box-shadow: 30px 30px 0px rgba(35, 25, 248, 0.3);background: linear-gradient(90deg, rgba(0, 0, 0, 0) 50%, rgba(35, 25, 248, 0.3) 50%);"
+          src="/images/logo.png">
       </div>
-      <div class="box-shadow" style="height: 4px; left: 30px; bottom: -34px; width: calc(100%  - 4px);"></div>
-      <div class="box-shadow" style="width: 4px; top: 30px; right: -34px; height: calc(100% - 4px);"></div>
     </div>
 
   </div>
