--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,7 @@
   <meta content="{{ site.description }}" name="description">
   <title>Catskull Records</title>
   <link rel="stylesheet" href="/css/style.css">
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
 </head>
 
 <body>
