add header and main tags

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,9 @@
 
 <body>
 
-  <div class="flex-container">
+  <header>
+
+    <div class="flex-container">
 
     <div class="box" style="background: none; box-shadow: none; margin-bottom: 0;">
       <div style="line-height: 0; text-align: center;">
@@ -22,7 +24,9 @@
       </div>
     </div>
 
-  </div>
+  </header>
+
+  <main>
 
   <div class="flex-container">
 
