--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,11 +16,13 @@
 
     <div class="flex-container">
 
-    <div class="box" style="background: none; box-shadow: none; margin-bottom: 0;">
-      <div style="line-height: 0; text-align: center;">
-        <img
-          style="width: 85%;margin-top: 1rem;margin-bottom: 1rem;image-rendering: pixelated;box-shadow: 30px 30px 0px rgba(35, 25, 248, 0.3);background: linear-gradient(90deg, rgba(0, 0, 0, 0) 50%, rgba(35, 25, 248, 0.3) 50%);"
-          src="/images/logo.png">
+      <div class="box" style="background: none; box-shadow: none; margin-bottom: 0;">
+        <div style="line-height: 0; text-align: center;">
+          <img
+            style="width: 85%;margin-top: 1rem;margin-bottom: 1rem;image-rendering: pixelated;box-shadow: 30px 30px 0px rgba(35, 25, 248, 0.3);background: linear-gradient(90deg, rgba(0, 0, 0, 0) 50%, rgba(35, 25, 248, 0.3) 50%);"
+            src="/images/logo.png"
+            alt="Catskull Records logo">
+        </div>
       </div>
     </div>
 
